chore: fix counter pill alignment

--- a/src/admin/components/elements/CounterPill/index.scss
+++ b/src/admin/components/elements/CounterPill/index.scss
@@ -22,10 +22,11 @@
 
   &--float-number {
     position: absolute;
-    line-height: 0;
-    top: 50%;
-    left: 0;
+    line-height: 2;
+    top: 0;
     right: 0;
+    bottom: 0;
+    left: 0;
   }
 }
 
